--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(AsciiVideoFilter)
 
-# Add source files
-file(GLOB_RECURSE SRC_FILES src/*.cpp)
-add_executable(AsciiVideoFilter main.cpp ${SRC_FILES})
-
 # Find FFmpeg packages
 find_package(PkgConfig REQUIRED)
-
-# Tell pkg-config what to look for
 pkg_check_modules(FFMPEG REQUIRED IMPORTED_TARGET
     libavformat
     libavcodec
@@ -20,23 +14,72 @@ pkg_check_modules(FFMPEG REQUIRED IMPORTED_TARGET
     libswscale
 )
 
-# Link the libraries
-target_link_libraries(AsciiVideoFilter
+# Create a library from your source files (excluding main.cpp)
+file(GLOB_RECURSE SRC_FILES src/*.cpp)
+add_library(AsciiVideoFilterLib ${SRC_FILES})
+
+# Link FFmpeg to the library
+target_link_libraries(AsciiVideoFilterLib
     PkgConfig::FFMPEG
 )
 
-# Include FFmpeg headers
-target_include_directories(AsciiVideoFilter PRIVATE
-    ${FFMPEG_INCLUDE_DIRS}
+# Include directories for the library
+target_include_directories(AsciiVideoFilterLib PUBLIC
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/include
+    ${FFMPEG_INCLUDE_DIRS}
 )
 
-# Add compile definitions if needed (some FFmpeg functions require them)
-target_compile_definitions(AsciiVideoFilter PRIVATE
+# Add compile definitions
+target_compile_definitions(AsciiVideoFilterLib PRIVATE
     ${FFMPEG_CFLAGS_OTHER}
 )
 
-# turns out my this is cmake 3.50
-# Generate compile_commands.json
+# Main executable
+add_executable(AsciiVideoFilter main.cpp)
+target_link_libraries(AsciiVideoFilter AsciiVideoFilterLib)
+
+# ================================
+# TESTING SETUP
+# ================================
+
+# Enable testing
+enable_testing()
+
+# Create test directory structure
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tests)
+
+# Test 1: Basic types test (no FFmpeg dependencies)
+add_executable(test_basic_types tests/test_basic_types.cpp)
+target_link_libraries(test_basic_types AsciiVideoFilterLib)
+add_test(NAME BasicTypes COMMAND test_basic_types)
+
+# Test 2: Video decoder test (requires FFmpeg)
+add_executable(test_video_decoder tests/test_decoder.cpp)
+target_link_libraries(test_video_decoder AsciiVideoFilterLib)
+add_test(NAME VideoDecoder COMMAND test_video_decoder)
+
+# # Test 3: ASCII converter test
+# add_executable(test_ascii_converter test/test_ascii_converter.cpp)
+# target_link_libraries(test_ascii_converter AsciiVideoFilterLib)
+# add_test(NAME AsciiConverter COMMAND test_ascii_converter)
+
+# Test 4: Integration test (if you have a test video file)
+# add_test(NAME Integration
+#          COMMAND AsciiVideoFilter ${CMAKE_SOURCE_DIR}/test/sample.mp4 ${CMAKE_BINARY_DIR}/test/output.mp4
+#          WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+# Set test properties (optional)
+set_tests_properties(BasicTypes PROPERTIES TIMEOUT 10)
+set_tests_properties(VideoDecoder PROPERTIES TIMEOUT 30)
+# set_tests_properties(AsciiConverter PROPERTIES TIMEOUT 30)
+
+# Custom target to run all tests
+add_custom_target(run_tests
+    COMMAND ${CMAKE_CTEST_COMMAND} --verbose
+    DEPENDS test_basic_types test_video_decoder
+    COMMENT "Running all tests"
+)
+
+# # Generate compile_commands.json (CMAKE 3.5 and above sadly)
 # set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
