its all cooked, everything is hell

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.16)
 project(AsciiVideoFilter LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
 
 # Find FFmpeg packages via pkg-config
 find_package(PkgConfig REQUIRED)
@@ -36,3 +39,7 @@ add_executable(AsciiVideoFilter main.cpp)
 target_link_libraries(AsciiVideoFilter
     AsciiVideoFilterLib
 )
+
+# Add debug logging macro globally
+target_compile_definitions(AsciiVideoFilterLib PRIVATE DEBUG)
+target_compile_definitions(AsciiVideoFilter PRIVATE DEBUG)
